Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-08-15 Kimmo
 PATCH: [ 1540129 ] Fix indentation of diffutils io.c
  Src/diffutils/src: IO.C
 PATCH: [ 1540054 ] Remove Copy All -items from folder compare menu
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-08-13 Gal
 BUG: [ 1538340 ] Undo enabled for folder compare.
  Src: DirView.h DirView.cpp

2006-08-13 Takashi
 Japanese translation - update
  Src/Languages/Japanese/MergeJapanese.rc

2006-08-13 Tim
 PATCH: [ 1539204 ] Remove '#' from '#differences' column
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-08-11 Kimmo
 PATCH: [ 1538264 ] Split DiffFileData class to own files
  Src: DiffWrapper.cpp DiffWrapper.h DirScan.cpp DirViewColItems.cpp Merge.dsp
  Src new files: DiffFileData.cpp DiffFileData.h
 PATCH: [ 1537261 ] Swedish 2.5.5.6+ translation update
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2006-08-10 Kimmo
 Fix doxygen comment for ImportOptions()
  Src/Common: OptionsMgr.cpp

2006-08-10 Gal
 PATCH: Code cleanup. Removed commented out code.
  Src/Common: SuperComboBox.cpp

 BUG: [ 1531965 ] Crash undoing empty (?) event
  Src/editlib: ccrystaleditview.cpp

2006-08-09 Jan Hryz
 Czech translation - update
  Src/Languages/Czech/MergeCzech.rc

2006-08-09 Jochen
 PATCH: [ 1310951 ] Option to copy DirCmpReport to clipboard
  Src: DirCmpReport.cpp DirCmpReport.h DirCmpReportDlg.cpp DirCmpReportDlg.h
   Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2006-08-08 Jan Hryz
 Czech translation - update
  Src/Languages/Czech/MergeCzech.rc

2006-08-08 WinMerge experimental release 2.5.5.6 (cvs)

2006-08-08 Kimmo
 BUG: [ 1535835 ] Import settings from the file
  Src/Common: PreferencesDlg.cpp PreferencesDlg.h
 PATCH: [ 1536240 ] Fix diff count numbers for real
  Src: DiffWrapper.cpp DirScan.cpp
  Src/diffutils/src: analyze.c UTIL.c

2006-08-07 Jochen
 PATCH: [ 1514487 ] Merge7z DllBuild 0018