@@ -8,6 +8,9 @@ Add new items to top.
  PATCH: [ 1540054 ] Remove Copy All -items from folder compare menu
   Src: Merge.rc
   Src/Languages/*: Merge*.rc
+ PATCH: [ 1535558 ] Add GUI for shell extension folder include
+  Src: Merge.rc PropRegistry.cpp PropRegistry.h resource.h
+  Src/Languages/*: Merge*.rc
 
 2006-08-13 Gal
  BUG: [ 1538340 ] Undo enabled for folder compare.
